--- a/css/main.css
+++ b/css/main.css
@@ -57,10 +57,11 @@ ul{
   margin: 0;
   padding: 0;
   overflow: hidden;
+  text-align: center;
 }
 
 li{
-  float: center;
+  text-align: center;
 }
 
 p{
