added padding to about

--- a/css/main.css
+++ b/css/main.css
@@ -43,6 +43,11 @@ header{
   padding-top: 3em;
 }
 
+.about{
+  padding-left: 2em;
+  padding-right: 2em;
+}
+
 h1{
   font-size: 2.75em;
   font-family: 'Ultra', serif;
