--- a/css/main.css
+++ b/css/main.css
@@ -31,8 +31,9 @@ main{
   padding-top: 3em;
 }
 
-.nameplate{
-  padding: 0;
+.work{
+  width: 100%;
+  padding-left: 10%;
 }
 
 .me{
@@ -43,7 +44,7 @@ main{
 }
 
 .about{
-  width: 40%;
+  width: 50%;
   display: block;
   text-align: center;
   margin: auto;
@@ -68,7 +69,7 @@ h2{
 }
 
 h3{
-  font-size: 5em;
+  font-size: 8em;
   font-family: 'Lilita One', cursive;
   color: white;
   padding: 0;
@@ -137,12 +138,6 @@ footer{
   width: 25%;
 }
 
-.work{
-  margin: auto;
-  width: 100%;
-  padding-left: 10%;
-}
-
 /* Small */
 @media only screen and (min-width: 25em) {
 
@@ -151,8 +146,8 @@ font-size: 60%;
 line-height: 1.4;
 }
 
-h1{
-  font-size: 2.75em;
+h3{
+  font-size: 3em;
   text-align: center;
 }
 
@@ -184,14 +179,13 @@ main{
   width: 100%;
 }
 
-h1{
-  font-size: 54px;
+h3{
+  font-size: 4em;
   padding-left: 0;
   text-align: center;
   width: 100%;
   margin-left: 0;
   max-height: inherit;
-  padding-bottom: 2em;
 }
 
 h2{
@@ -211,6 +205,7 @@ p{
 
 .work{
   padding-bottom: 3em;
+  padding-left: 3em;
 }
 }
 
