--- a/css/main.css
+++ b/css/main.css
@@ -77,6 +77,14 @@ h3{
   letter-spacing: 3px;
 }
 
+figcaption{
+  font-size: 8px;
+  font-family: 'Montserrat', sans-serif;
+  color: black;
+  padding-top: .5em;
+}
+
+
 ul{
   list-style-type: none;
   margin: 0;
