--- a/css/main.css
+++ b/css/main.css
@@ -66,6 +66,7 @@ h2{
   color: white;
   text-align: center;
   padding-top: 1em;
+  padding-bottom: 1em;
 }
 
 h3{
@@ -76,14 +77,6 @@ h3{
   text-align: center;
   letter-spacing: 3px;
 }
-
-figcaption{
-  font-size: 8px;
-  font-family: 'Montserrat', sans-serif;
-  color: black;
-  padding-top: .5em;
-}
-
 
 ul{
   list-style-type: none;
