--- a/css/harrypotter.css
+++ b/css/harrypotter.css
@@ -93,8 +93,22 @@ a{
 }
 
 a:hover{
-  color: white;
+  color: #f0504d;
 }
+
+.link{
+  color: white;
+  font-weight: 300;
+  font-size: 15px;
+  border: 1px solid white;
+  border-radius: 1em;
+  text-decoration: none;
+  font-family: 'Montserrat', sans-serif;
+  box-sizing: border-box;
+  margin: 0;
+  padding: .5em;
+}
+
 
 footer{
   padding: 1em 2em;
