amended slash in index for css

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -42,7 +42,7 @@
 
   <div class="work">
     <a id="work"></a>
-			<a href="harrypotter.html"><img src="{{site.baseurl}}/img/hpotter.png" alt=""></a>
+			<a href="{{site.baseurl}}/harrypotter/"><img src="{{site.baseurl}}/img/hpotter.png" alt=""></a>
       <a href="{{site.baseurl}}/bekkers/"><img src="{{site.baseurl}}/img/logo.png" alt=""></a>
       <a href="{{site.baseurl}}/fromm/"><img src="{{site.baseurl}}/img/frommbag.png" alt=""></a>
       <a href="{{site.baseurl}}/vegan/"><img src="{{site.baseurl}}/img/vegan.png" alt=""></a>
