--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -3,66 +3,26 @@
 <head>
   <meta charset="utf-8">
   <title>Shannon Hawn</title>
-  <link href="{{site.baseurl}}/css/main.css" rel="stylesheet">
-  <link href="{{site.baseurl}}/css/grid.css" rel="stylesheet">
-  <link href="{{site.baseurl}}/css/module.css" rel="stylesheet">
+  <link href="css/main.css" rel="stylesheet">
   <meta name="handheldfriendly" content="true">
   <meta name="mobileoptimized" content="240">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/css?family=Lilita+One" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Bungee+Inline" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Josefin+Slab" rel="stylesheet">
 </head>
-
 <body>
+  <header>
+      <div class="nav">
+          <a id="nav"></a>
+        <ul>
+          <li><a href="#work">Work</a></li>
+          <li><a href="#about">About</a></li>
+          <li><a href="#contact">Contact</a></li>
+        </ul>
+        </div>
+  </header>
 
-<header>
-    <div class="nav">
-        <a id="nav"></a>
-      <ul>
-        <li><a href="#work">Work</a></li>
-        <li><a href="#about">About</a></li>
-        <li><a href="#contact">Contact</a></li>
-      </ul>
-      </div>
-</header>
-
-<main>
-  <div class="image">
-    <img class="me" src="img/shannon.svg" alt="illustration of designer">
-    <a id="me"></a>
-    <h3>Shannon Hawn</h3>
-   </div>
- </div>
-</main>
-
-<div class="about">
-  <a id="about"></a>
-  <p>Shannon Hawn is a graphic designer based in Ottawa with her husband and their tiny zoo of animals. She is an advertising grad, Pinterest addict and lover of pugs. She loves beautiful design, photography and illustration.</p>
-</div>
-
-  <div class="work">
-    <a id="work"></a>
-			<a href="{{site.baseurl}}/harrypotter/"><img src="{{site.baseurl}}/img/hpotter.png" alt=""></a>
-      <a href="{{site.baseurl}}/bekkers/"><img src="{{site.baseurl}}/img/logo.png" alt=""></a>
-      <a href="{{site.baseurl}}/fromm/"><img src="{{site.baseurl}}/img/frommbag.png" alt=""></a>
-      <a href="{{site.baseurl}}/vegan/"><img src="{{site.baseurl}}/img/vegan.png" alt=""></a>
-      <a href="{{site.baseurl}}/barkpark"><img src="{{site.baseurl}}/img/barkparkphone.png" alt=""></a>
-      <a href="{{site.baseurl}}/infographic/"><img src="{{site.baseurl}}/img/info.png" alt=""></a>
-      <a href="{{site.baseurl}}/doll/"><img src="{{site.baseurl}}/img/doll.png" alt=""></a>
-	</div>
-
-
-<div class="contact">
-  <a id="contact"></a>
-<footer>
-  <a href="mailto:shannonhawn@hotmail.com"><img class="social" src="img/email.svg"></a>
-  <a href="https://ca.linkedin.com/in/shannonhawn"><img class="social" src="img/linkedin.svg"></a>
-  <a href="https://www.instagram.com/shannonsauve_design/"><img class="social" src="img/insta.svg"></a>
-  <a href="https://www.behance.net/hawnsauve/"><img class="social" src="img/be.svg"></a>
-<div class="top">
-  <a href="#nav">TOP</a>
-</div>
-</footer>
-</div>
+{{content}}
 
 </body>
+</html>
