created a new  css, added baseurl to links

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <title>Shannon Hawn</title>
-  <link href="css/main.css" rel="stylesheet">
+  <link href="{{site.baseurl}}/css/common.css" rel="stylesheet">
   <meta name="handheldfriendly" content="true">
   <meta name="mobileoptimized" content="240">
   <meta name="viewport" content="width=device-width, initial-scale=1">
