added to gitignore, added metadata

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -2,7 +2,16 @@
 <html lang="en-ca">
 <head>
   <meta charset="utf-8">
-  <title>Shannon Hawn</title>
+  <title>{{page.title}}</title>
+  <meta name="description" content="{{page.description}}">
+  <html prefix="og: http://ogp.me/ns#">
+
+  <meta property="og:title" content="Shannon Hawn Portfolio Site" />
+  <meta property="og:type" content="website" />
+  <meta property="og:url" content="https://shannonhawn.github.io/shannon-hawn-sauve" />
+  <meta property="og:image" content="https://shannonhawn.github.io/shannon-hawn-sauve/img/shannon.svg" />
+  <meta property="og:description" content="My portfolio website. Shannon Hawn"/>
+
   <link href="{{site.baseurl}}/css/common.css" rel="stylesheet">
   <meta name="handheldfriendly" content="true">
   <meta name="mobileoptimized" content="240">
