--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -12,6 +12,8 @@
   <meta property="og:image" content="https://shannonhawn.github.io/shannon-hawn-sauve/img/shannon.svg" />
   <meta property="og:description" content="My portfolio website. Shannon Hawn"/>
 
+  <meta property="twitter:summary" content="Shannon Hawn Portfolio" />
+
   <link href="{{site.baseurl}}/css/common.css" rel="stylesheet">
   <meta name="handheldfriendly" content="true">
   <meta name="mobileoptimized" content="240">
