updated my about me, added write ups and reformatted content

--- a/css/common.css
+++ b/css/common.css
@@ -65,7 +65,7 @@ h2{
 
 h3{
   font-size: 8em;
-  font-family: 'Lilita One', cursive;
+  font-family: 'Bungee Inline', cursive;
   color: white;
   padding: 0;
   text-align: center;
