--- a/css/main.css
+++ b/css/main.css
@@ -145,23 +145,25 @@ footer{
   min-width: 350px;
 }
 
-div.img {
+/* Page Layout */
+
+.image {
     margin: 5px;
     border: 1px solid #ccc;
     float: left;
     width: 180px;
 }
 
-div.img:hover {
+.img:hover {
     border: 1px solid #777;
 }
 
-div.img img {
+.img img {
     width: 100%;
     height: auto;
 }
 
-div.desc {
+.desc {
     padding: 15px;
     text-align: center;
 }
