tried something new - added code from prev. gallery

--- a/css/main.css
+++ b/css/main.css
@@ -21,10 +21,6 @@ header{
   text-align: center;
 }
 
-body{
-  margin:0;
-}
-
 main{
   background-color: #b0d2d7;
   padding-bottom: 3em;
@@ -145,28 +141,82 @@ footer{
   min-width: 350px;
 }
 
-/* Page Layout */
-
-.image {
-    margin: 5px;
-    border: 1px solid #ccc;
-    float: left;
-    width: 180px;
+/* Single Page Layout */
+body {
+   margin: 0;
+   padding: 0;
+}
+.wrap {
+   overflow: hidden;
+   margin: 10px;
+}
+.box {
+   float: left;
+   position: relative;
+   width: 20%;
+   padding-bottom: 20%;
+}
+.boxInner {
+   position: absolute;
+   left: 10px;
+   right: 10px;
+   top: 10px;
+   bottom: 10px;
+   overflow: hidden;
+}
+.boxInner img {
+   width: 100%;
+}
+.boxInner .titleBox {
+   position: absolute;
+   bottom: 0;
+   left: 0;
+   right: 0;
+   margin-bottom: -50px;
+   background: #000;
+   background: rgba(0, 0, 0, 0.5);
+   color: #FFF;
+   padding: 10px;
+   text-align: center;
+   -webkit-transition: all 0.3s ease-out;
+   -moz-transition: all 0.3s ease-out;
+   -o-transition: all 0.3s ease-out;
+   transition: all 0.3s ease-out;
+}
+body.no-touch .boxInner:hover .titleBox, body.touch .boxInner.touchFocus .titleBox {
+   margin-bottom: 0;
+}
+@media only screen and (max-width : 480px) {
+   /* Smartphone */
+   .box {
+      width: 100%;
+      padding-bottom: 100%;
+   }
+}
+@media only screen and (max-width : 650px) and (min-width : 481px) {
+   /* Tablet */
+   .box {
+      width: 50%;
+      padding-bottom: 50%;
+   }
+}
+@media only screen and (max-width : 1050px) and (min-width : 651px) {
+   /* Small desktop */
+   .box {
+      width: 33.3%;
+      padding-bottom: 33.3%;
+   }
+}
+@media only screen and (max-width : 1290px) and (min-width : 1051px) {
+   /* Medium desktop */
+   .box {
+      width: 25%;
+      padding-bottom: 25%;
+   }
 }
 
-.img:hover {
-    border: 1px solid #777;
-}
 
-.img img {
-    width: 100%;
-    height: auto;
-}
-
-.desc {
-    padding: 15px;
-    text-align: center;
-}
+/* Main Page Layout */
 
 /* Small */
 @media only screen and (min-width: 25em) {
