--- a/css/main.css
+++ b/css/main.css
@@ -78,6 +78,16 @@ h3{
   letter-spacing: 3px;
 }
 
+h4{
+  font-size: 2em;
+  font-family: 'Montserrat', sans-serif;
+  color: white;
+  text-align: center;
+  padding-top: 1em;
+  padding-bottom: 1em;
+}
+
+
 ul{
   list-style-type: none;
   margin: 0;
