--- a/css/main.css
+++ b/css/main.css
@@ -78,7 +78,7 @@ h3{
   letter-spacing: 3px;
 }
 
-h2{
+h4{
   font-size: 2em;
   font-family: 'Montserrat', sans-serif;
   color: white;
@@ -119,10 +119,10 @@ a{
 p{
   font-family: 'Montserrat', sans-serif;
   margin: 0;
-  font-size: 14px;
-  font-weight: 400;
+  font-size: 12px;
+  font-weight: 200;
   color: white;
-  text-align: center;
+  text-align: left;
   position: relative;
   padding: 1em 0 0 1em;
   width: 25%;
