--- a/css/main.css
+++ b/css/main.css
@@ -78,13 +78,26 @@ h3{
   letter-spacing: 3px;
 }
 
-h4{
+.name{
   font-size: 2em;
   font-family: 'Montserrat', sans-serif;
   color: white;
   text-align: center;
   padding-top: 1em;
   padding-bottom: 1em;
+}
+
+
+.description{
+  font-family: 'Montserrat', sans-serif;
+  margin: 0;
+  font-size: 12px;
+  font-weight: 200;
+  color: white;
+  text-align: left;
+  position: relative;
+  padding: 1em 0 0 1em;
+  width: 25%;
 }
 
 
@@ -119,13 +132,13 @@ a{
 p{
   font-family: 'Montserrat', sans-serif;
   margin: 0;
-  font-size: 12px;
-  font-weight: 200;
+  font-size: 14px;
+  font-weight: 400;
   color: white;
   text-align: left;
   position: relative;
   padding: 1em 0 0 1em;
-  width: 25%;
+  width: 100%;
 }
 
 a:hover{
