--- a/css/common.css
+++ b/css/common.css
@@ -65,7 +65,7 @@ h3{
   letter-spacing: 3px;
 }
 
-.description{
+.description, p{
   font-family: 'Raleway', sans-serif;
   line-height: 1.5em;
   font-size: 1em;
