--- a/css/common.css
+++ b/css/common.css
@@ -71,7 +71,7 @@ h3{
 p{
   font-family: 'Raleway', sans-serif;
   line-height: 1.5em;
-  font-size: 1em;
+  font-size: 5em;
   color: white;
   text-align: center;
   width: 75%;
@@ -119,13 +119,6 @@ a:hover{
   color: white;
 }
 
-.bio{
-  display: block;
-  margin: 0;
-  width: 100%;
-  text-align: center;
-}
-
 footer{
   padding: 1em 2em;
   background-color: #b0d2d7;
@@ -159,8 +152,13 @@ main{
   margin: auto;
 }
 
+p{
+  width:100%;
+  font-size: 8em;
+}
+
 .nav{
-  font-size:7em;
+  font-size:10em;
 }
 
 .work{
