--- a/css/common.css
+++ b/css/common.css
@@ -71,7 +71,7 @@ h3{
 p{
   font-family: 'Raleway', sans-serif;
   line-height: 1.5em;
-  font-size: 5em;
+  font-size: 1em;
   color: white;
   text-align: center;
   width: 75%;
@@ -119,6 +119,13 @@ a:hover{
   color: white;
 }
 
+.bio{
+  display: block;
+  margin: 0;
+  width: 100%;
+  text-align: center;
+}
+
 footer{
   padding: 1em 2em;
   background-color: #b0d2d7;
@@ -150,19 +157,6 @@ main{
 .social{
   width: 10%;
   margin: auto;
-}
-
-p{
-  width:100%;
-  font-size: 8em;
-}
-
-.nav{
-  font-size:10em;
-}
-
-.work{
-  width:50%;
 }
 }
 
