--- a/css/common.css
+++ b/css/common.css
@@ -73,6 +73,15 @@ h3{
   text-align: left;
 }
 
+.description{
+  font-family: 'Raleway', sans-serif;
+  font-size: 2em;
+  color: white;
+  margin-left: 25%;
+  width: 55%;
+  text-align: center;
+}
+
 ul{
   list-style-type: none;
   margin: 0;
