--- a/css/common.css
+++ b/css/common.css
@@ -73,6 +73,16 @@ h3{
   text-align: left;
 }
 
+p{
+  font-family: 'Raleway', sans-serif;
+  line-height: 1.5em;
+  font-size: 1em;
+  color: white;
+  margin-left: 10%;
+  margin-bottom: 10%;
+  width: 95%;
+  text-align: center;
+}
 
 ul{
   list-style-type: none;
@@ -134,12 +144,16 @@ line-height: 1.4;
 }
 
 h3{
-  font-size: 2em;
+  font-size: 1em;
   font-family: 'Bungee Inline', cursive;
   color: white;
   padding: 0;
   text-align: center;
-  letter-spacing: 3px;
+  letter-spacing: 1px;
+}
+
+.top{
+  font-size: 5em;
 }
 
 main{
@@ -166,12 +180,12 @@ main{
 }
 
 h3{
-  font-size: 4em;
-  padding-left: 0;
+  font-size: 2em;
+  font-family: 'Bungee Inline', cursive;
+  color: white;
+  padding: 0;
   text-align: center;
-  width: 100%;
-  margin-left: 0;
-  max-height: inherit;
+  letter-spacing: 2px;
 }
 
 h2{
@@ -179,7 +193,7 @@ h2{
 }
 
 .social{
-  width:7%;
+  width:15%;
 }
 }
 
@@ -202,6 +216,15 @@ h1{
   width: 100%;
   text-align: center;
   max-height: inherit;
+}
+
+h3{
+  font-size: 4em;
+  font-family: 'Bungee Inline', cursive;
+  color: white;
+  padding: 0;
+  text-align: center;
+  letter-spacing: 3px;
 }
 
 .social{
