added new images

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -5,7 +5,6 @@
   <title>{{page.title}}</title>
   <meta name="description" content="{{page.description}}">
   <html prefix="og: http://ogp.me/ns#">
-
   <meta property="og:title" content="Shannon Hawn Portfolio Site" />
   <meta property="og:type" content="website" />
   <meta property="og:url" content="https://shannonhawn.github.io/shannon-hawn-sauve" />
@@ -14,8 +13,7 @@
 
   <meta property="twitter:summary" content="Shannon Hawn Portfolio" />
 
-  <link href="{{site.baseurl}}/css/common.css" rel="stylesheet">
-  <link href="{{site.baseurl}}/css/grid.css" rel="stylesheet">
+  <link href=""css/site.css" rel="stylesheet">
   <meta name="handheldfriendly" content="true">
   <meta name="mobileoptimized" content="240">
   <meta name="viewport" content="width=device-width, initial-scale=1">
