--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -13,7 +13,7 @@
 
   <meta property="twitter:summary" content="Shannon Hawn Portfolio" />
 
-  <link href=""css/site.css" rel="stylesheet">
+  <link href="css/site.css" rel="stylesheet">
   <meta name="handheldfriendly" content="true">
   <meta name="mobileoptimized" content="240">
   <meta name="viewport" content="width=device-width, initial-scale=1">
