--- a/css/main.css
+++ b/css/main.css
@@ -44,10 +44,11 @@ main{
 }
 
 .404{
-  width: 1%;
+  width: 50%;
   display: block;
+  text-align: center;
   margin: auto;
-  padding-top: 3em;
+  padding-top: 1em;
 }
 
 .about{
