--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -14,6 +14,7 @@
   <meta property="twitter:summary" content="Shannon Hawn Portfolio" />
 
   <link href="css/site.css" rel="stylesheet">
+  <link href="content/favicon.ico" rel="shortcut icon">
   <meta name="handheldfriendly" content="true">
   <meta name="mobileoptimized" content="240">
   <meta name="viewport" content="width=device-width, initial-scale=1">
